--- a/src/QuizTime.Api/QuizTime.Api.csproj
+++ b/src/QuizTime.Api/QuizTime.Api.csproj
@@ -11,4 +11,14 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Midlewares\" />
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuizTime.Service\QuizTime.Service.csproj" />
+  </ItemGroup>
+
 </Project>
