--- a/src/QuizTime.DataAccess/QuizTime.DataAccess.csproj
+++ b/src/QuizTime.DataAccess/QuizTime.DataAccess.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DbContext\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuizTime.Domain\QuizTime.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
