--- a/test/QuizTime.IntegrationTest/QuizTime.IntegrationTest.csproj
+++ b/test/QuizTime.IntegrationTest/QuizTime.IntegrationTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuizTime.UnitTest\QuizTime.UnitTest.csproj" />
+  </ItemGroup>
+
 </Project>
