--- a/test/QuizTime.UnitTest/QuizTime.UnitTest.csproj
+++ b/test/QuizTime.UnitTest/QuizTime.UnitTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\QuizTime.Service\QuizTime.Service.csproj" />
+  </ItemGroup>
+
 </Project>
