--- a/src/QuizTime.Api/QuizTime.Api.csproj
+++ b/src/QuizTime.Api/QuizTime.Api.csproj
@@ -15,6 +15,9 @@
     <Folder Include="Controllers\" />
     <Folder Include="Midlewares\" />
     <Folder Include="Configurations\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Midlewares\" />
   </ItemGroup>
 
   <ItemGroup>
