--- a/src/QuizTime.Domain/QuizTime.Domain.csproj
+++ b/src/QuizTime.Domain/QuizTime.Domain.csproj
@@ -11,6 +11,10 @@
     <Folder Include="Entities\" />
     <Folder Include="Enums\" />
     <Folder Include="Constants\" />
+    <Folder Include="Common\" />
+    <Folder Include="Constants\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
