--- a/src/QuizTime.Api/QuizTime.Api.csproj
+++ b/src/QuizTime.Api/QuizTime.Api.csproj
@@ -18,6 +18,7 @@
     <Folder Include="Configurations\" />
     <Folder Include="Controllers\" />
     <Folder Include="Midlewares\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
