--- a/src/QuizTime.Service/QuizTime.Service.csproj
+++ b/src/QuizTime.Service/QuizTime.Service.csproj
@@ -7,26 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Helpers\" />
-    <Folder Include="Common\Exceptions\" />
-    <Folder Include="Common\Attributes\" />
-    <Folder Include="Common\Attributes\" />
-    <Folder Include="Common\Exceptions\" />
-    <Folder Include="Common\Helpers\" />
-    <Folder Include="Common\Validations\" />
-    <Folder Include="Common\Utils\" />
-    <Folder Include="Common\Security\" />
-    <Folder Include="Common\Validations\" />
-    <Folder Include="Common\Security\" />
-    <Folder Include="Common\Utils\" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="Dtos\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Dtos\" />
     <Folder Include="Interfaces\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Services\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="ClosedXML" Version="0.102.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
