--- a/src/QuizTime.Service/QuizTime.Service.csproj
+++ b/src/QuizTime.Service/QuizTime.Service.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Dtos\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Dtos\" />
     <Folder Include="Interfaces\" />
     <Folder Include="ViewModels\" />
     <Folder Include="ViewModels\" />
@@ -27,6 +24,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QuizTime.DataAccess\QuizTime.DataAccesss.csproj" />
