--- a/src/QuizTime.Service/QuizTime.Service.csproj
+++ b/src/QuizTime.Service/QuizTime.Service.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="ViewModels\" />
+    <Folder Include="Interfaces\Tests\" />
   </ItemGroup>
 
   <ItemGroup>
